# Ai-Local-Models-Router

./: .gitignore  README.md  package-lock.json  package.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  appState.ts  background.ts  hardware.ts  installer.ts  modelCatalog.ts  providers.ts  remoteBroker.ts  remoteClient.ts  router.ts  styles.css  updater.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: app_state.rs  background_core.rs  hardware_probe.rs  installer_core.rs  lib.rs  local_api_core.rs  main.rs  model_catalog.rs  provider_core.rs  remote_broker_core.rs  remote_client_core.rs  router_core.rs  updater_core.rs
docs/: ARCHITECTURE.md  FINAL_VERIFICATION.md  LEARNING_BOOST_OPERATOR_GUIDE.md  LEARNING_BOOST_PATCH_CLARIFICATION.md  LOCAL_INTEGRATION_API.md  MAC_APPLE_SILICON.md  MAC_INTEL.md  MEMORY_WISE_OPERATIONS.md  MODEL_CATALOG.md  PACKAGING.md  PAUSE_MODE.md  PROVIDERS.md  REGULAR_VS_DRY_RUN.md  RELEASE_CHECKLIST.md  REMOTE_PAIRING.md  SCENARIOS.md  SECURITY.md  STAGE_CHECKLIST.md  USER_GUIDE.md  WINDOWS.md
docs/development/: STAGE_HISTORY.md
fixtures/hardware/: apple_silicon_m3_pro_18gb.json  intel_mac_16gb.json  intel_mac_32gb.json  intel_mac_8gb.json  windows_gtx_1060_30gb.json
fixtures/model_catalog/: seed_models.json
fixtures/update_metadata/: custom_catalog.json  mlx_huggingface.json  ollama_tags.json
scripts/: build_macos_app.sh  build_windows_app.ps1
