[package]
name = "local-ai-router-desktop"
version = "0.1.0"
description = "Local AI Router desktop shell"
authors = ["Bilal Alissa"]
license = "MIT"
edition = "2021"

[lib]
name = "local_ai_router_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
